--- a/templates/indexx.html
+++ b/templates/indexx.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="layout vertical" style="height: 200px;justify-content: space-between">
                     <p title="当天最高温度">最高气温</p>
-                    <p title="当前气温">当前温度</p>
+                    <p title="当前气温">当前</p>
                     <p title="当天最低温度">最低气温</p>
                 </div>
                 <div id="temperature-bar"></div>
