--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <script src="../static/js/lunar.js"></script>
 </head>
 <body class="theme--{{ data.theme }}">
-<div class="c-weather-current city-weather-cloudy" id="background">
+<div class="{{ data.current_weather_bg_class }}" id="background">
     <div class="main-container">
         <div class="layout vertical" id="frame1">
             <p title="现在时间" id="current-time"></p>
