--- a/templates/index.html
+++ b/templates/index.html
@@ -12,12 +12,15 @@
 <body class="theme--{{ data.theme }}">
 <div class="{{ data.current_weather_bg_class }}" id="background">
     <div class="main-container">
-        <div class="layout vertical" id="frame1">
+        <div class="frame vertical" id="frame1">
             <p title="现在时间" id="current-time"></p>
             <p title="现在日期" id="current-date"></p>
             <p title="现在阴历" id="current-lunar"></p>
         </div>
-        <div class="layout vertical" id="frame2">
+        <div class="frame vertical" id="frame2">
+            <div id="location-name">
+                <p>{{ data.location_name }}</p>
+            </div>
             <div class="layout horizontal">
                 <div class="layout vertical" id="weather">
                     <div class="weather-icon">
@@ -27,6 +30,7 @@
                         <p title="当前天气描述">{{ data.now_weather }}</p><br>
                     </div>
                 </div>
+                <div style="width: 20px"></div>
                 <div class="layout vertical" style="height: 200px;justify-content: space-between">
                     <p title="当天最高温度">最高气温</p>
                     <p title="当前气温">当前温度</p>
@@ -40,9 +44,14 @@
 
                 </div>
             </div>
+            {% if weather_warnings.warning_exist == 1  %}
+            <div class="layout horizontal" id="warning" style="background-color: {{ weather_warnings.severity_color }}">
+                <i class="qi-{{ weather_warnings.type }}"></i>&nbsp<p>{{ weather_warnings.type_name }}</p>
+            </div>
+            {% endif %}
 
         </div>
-        <div class="layout vertical current-weather__bg" id="frame3">
+        <div class="frame vertical current-weather__bg" id="frame3">
 
             <div class="layout horizontal next-12-hours">
                 <div class="layout vertical weather-forecast">
